[package]
name = "bin"
version = "2.0.2"
description = "a paste bin."
repository = "https://github.com/w4/bin"
license = "WTFPL OR 0BSD"
authors = ["Jordan Doyle <jordan@doyle.la>"]
edition = "2024"

[dependencies]
argh = "0.1"
log = "0.4"
pretty_env_logger = "0.5"
linked-hash-map = "0.5"
parking_lot = "0.12"
bytes = { version = "1.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
gpw = "0.1"
actix-web = "4.4"
futures = "0.3"
dotenv = "0.15"
# Cryptographic dependencies for E2E encryption
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["reusable_secrets", "static_secrets"] } 
blake3 = "1.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
hex = "0.4"
rand_core = { version = "0.6", features = ["std"] }
zeroize = "1.8"

[profile.release]
lto = true
codegen-units = 1
incremental = false

[badges]
travis-ci = { repository = "w4/bin" }
is-it-maintained-issue-resolution = { repository = "w4/bin" }
is-it-maintained-open-issues = { repository = "w4/bin" }
maintenance = { status = "passively-maintained" }
