[package]
name = "bin-mod-board"
version = "2.0.2"
description = "a paste bin modified for board."
repository = "https://github.com/pybash1/bin"
license = "WTFPL OR 0BSD"
authors = ["Jordan Doyle <jordan@doyle.la>", "Ananjan Mitra <mitra.ananjan@gmail.com>"]
edition = "2024"

[dependencies]
argh = "0.1"
log = "0.4"
pretty_env_logger = "0.5"
linked-hash-map = "0.5"
parking_lot = "0.12"
bytes = { version = "1.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
gpw = "0.1"
actix-web = "4.4"
futures = "0.3"
dotenvy = "0.15"
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-actix-web = "0.1"

[profile.release]
lto = true
codegen-units = 1
incremental = false